<resources>
    <string name="app_name">Whiskers</string>
    <string name="action_refresh">Refresh</string>

    <string name="dummy_txt">Dummy text</string>
    <!--<string name="url">http://10.0.2.2:8080/lolcat/test.json</string>-->
    <string name="url">http://mycat.com/rest/</string>
    <string name="server_unreachable">Server unreachable. Please try again later.</string>
    <string name="n_a">N/A</string>
    <string name="nothing_to_display">Nothing to display</string>

    <!-- Details labels -->
    <string name="preferred_food">Preferred food:</string>
    <string name="food_package">Food package:</string>
    <string name="legs">Legs:</string>
    <string name="whiskers">Whiskers:</string>
    <string name="size">Size:</string>
    <string name="color">Color:</string>
</resources>
